# ClockApp

./: .clang-format  .gitignore  build-app.sh  build-container.sh  container-shell.sh  run-app.sh  run-github-self-hosted-runner.sh
.github/workflows/: main.yml
docker/: Dockerfile
src/: AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  DateTime.h  FunkyClass.cpp  FunkyClass.h  Network.cpp  Network.h  ObjectPropertyModel.cpp  ObjectPropertyModel.h  QmlInterface.cpp  QmlInterface.h  RoundAnimatedImage.cpp  RoundAnimatedImage.h  Screen.cpp  Screen.h  Settings.cpp  Settings.h  System.cpp  System.h  Temperature.h  TimeSince.cpp  TimeSince.h  Version.cpp  Version.h  build.sh  main.cpp  run.sh
src/applications/: Applications.cpp  Applications.h  BirthdayTimer.cpp  BirthdayTimer.h  Clock.cpp  Clock.h  Container.cpp  Container.h  CountdownTimer.cpp  CountdownTimer.h  Debug.cpp  Debug.h  MarriedTimer.cpp  MarriedTimer.h  Menu.cpp  Menu.h  Setup.cpp  Setup.h  TimeElapsedTimer.cpp  TimeElapsedTimer.h
src/applications/clock/: Application.cpp  Application.h  Configuration.cpp  Configuration.h
src/applications/common/: Configuration.cpp  Configuration.h  TimerConfiguration.cpp  TimerConfiguration.h
src/applications/countdown/: Application.cpp  Application.h
src/applications/debug/: Application.cpp  Application.h
src/applications/menu/: Application.cpp  Application.h  Item.cpp  Item.h  MenuItem.cpp  MenuItem.h  MenuModel.cpp  MenuModel.h  Model.cpp  Model.h
src/applications/setup/: Application.cpp  Application.h
src/applications/timeelapsed/: Application.cpp  Application.h
src/drivers/: Container.cpp  Container.h
src/drivers/network/: Driver.cpp  Driver.h
src/drivers/screen/: Driver.cpp  Driver.h
src/drivers/storage/: Driver.cpp  Driver.h
src/drivers/system/: Driver.cpp  Driver.h
src/drivers/temperature/: Driver.cpp  Driver.h
src/hal/: HAL.cpp  HAL.h  Network.cpp  Network.h  Screen.cpp  Screen.h  Storage.cpp  Storage.h  System.cpp  System.h  Temperature.cpp  Temperature.h
src/hal/network/: Driver.cpp  Driver.h
src/hal/screen/: Driver.cpp  Driver.h
src/hal/storage/: Driver.cpp  Driver.h
src/hal/system/: Driver.cpp  Driver.h
src/hal/temperature/: Driver.cpp  Driver.h
src/qml/: CMakeLists.txt  Main.qml  Translation.qml
src/qml/Components/: AnimationCarousel.qml  Backend.qml  BehaviorWhenVisible.qml  Button.qml  CMakeLists.txt  Circle.qml  Clock.qml  Color.qml  ColorWheel.qml  DateTimePicker.qml  DialWheel.qml  Dialog.qml  DialogOverlay.qml  DynamicPanel.qml  Flickable.qml  MediaCarousel.qml  MenuDialog.qml  NotificationCarousel.qml  NotificationOverlay.qml  Panel.qml  PanelContainer.qml  PanelTransition.qml  Pendulum.qml  RingMenu.qml  RoundButton.qml  RoundLayout.qml  RoundPanel.qml  RoundProgressBar.qml  SevenSegmentDisplay.qml  Spacer.qml  ToggleButton.qml  Utils.qml  Value.qml
src/qml/Main/: CMakeLists.txt  Content.qml  Main.qml
src/qml/Panels/: CMakeLists.txt  ClockPanel.qml  CountdownPanel.qml  DateTimePickerPanel.qml  DebugPanel.qml  LowerMainPanel.qml  LowerMenuOverlay.qml  PendulumPanel.qml  RoundProgressBarPanel.qml  SetupPanel.qml  SevenSegmentPanel.qml  StartupPanel.qml  TimeSincePanel.qml  UpperMainPanel.qml  UpperMenuOverlay.qml
src/qml/Panels/Debug/: GalleryPanel.qml  InspectorPanel.qml  InterfacePanel.qml  SimulationPanel.qml  UtilityPanel.qml
src/qml/Panels/Setup/: DateTimePickerPanel.qml  IntegerSelectPanel.qml  TitlePanel.qml  ToggleButtonPanel.qml
src/qmlcomponents/: QmlUtils.cpp  QmlUtils.h  RoundAnimatedImage.cpp  RoundAnimatedImage.h
src/services/: AnimationManager.cpp  AnimationManager.h  Container.cpp  Container.h  DateTime.cpp  DateTime.h  MediaManager.cpp  MediaManager.h  Notification.cpp  Notification.h  NotificationManager.cpp  NotificationManager.h  QmlInterface.cpp  QmlInterface.h  RemoteApi.cpp  RemoteApi.h  Services.cpp  Services.h  Settings.cpp  Settings.h  SystemMonitor.cpp  SystemMonitor.h  TimeSince.h  Version.cpp  Version.h
src/services/datetime/: Service.cpp  Service.h
src/services/media/: Item.cpp  Item.h  Model.cpp  Model.h  Service.cpp  Service.h
src/services/notification/: Item.cpp  Item.h  Model.cpp  Model.h  Service.cpp  Service.h
src/services/qmlinterface/: Service.cpp  Service.h
src/services/remoteapi/: DeviceStatus.cpp  DeviceStatus.h  MediaInfo.cpp  MediaInfo.h  MediaList.cpp  MediaList.h  SerializableObject.h  Service.cpp  Service.h
src/services/systemmonitor/: Service.cpp  Service.h
src/services/version/: Service.cpp  Service.h
